# cpp-observer-pattern-test

./: .clang-format  CMakeLists.txt
.github/workflows/: ci.yml
src/: core.hpp  main.cpp  mock.cpp  observer.hpp  state.cpp  state.hpp  statefull.hpp  subject.hpp
src/idea1/: state.hpp
src/idea2/: state.hpp  stateFactory.hpp  stateGroup.hpp  stateGroupInterface.hpp  stateGroupStorage.cpp  stateGroupStorage.hpp  stateInterface.hpp  stateStorage.cpp  stateStorage.hpp
src/idea2/factory/: stateFactory.cpp  stateFactory.hpp  stateGroupFactory.cpp  stateGroupFactory.hpp
src/idea2/state/: state.hpp  stateImpl.hpp  stateInterface.cpp  stateInterface.hpp
src/idea2/stateGroup/: stateGroup.hpp  stateGroupInterface.cpp  stateGroupInterface.hpp
src/idea2/statewrap/: statewrap.hpp
src/idea2/storage/: findElement.hpp  stateGroupStorage.cpp  stateGroupStorage.hpp  stateStorage.cpp  stateStorage.hpp
src/other_idea/: main.cpp  mock.cpp
test/: model.hpp  view.hpp
test/idea1/: CMakeLists.txt  main.cpp  model.hpp  view.hpp
test/idea2/: CMakeLists.txt  binding.cpp  comparison_operator.cpp  main.cpp  onChange.cpp
